Se implementa patron de diseño state en citas-service